<resources>
    <string name="app_name">MakeMyWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_main_wallet">Main Balance</string>
    <string name="menu_aesp_wallet">AEPS Balance Report</string>

    <string name="menu_data_card">Data card</string>
    <string name="menu_ybl_aeps_report">YBL Aeps Report</string>
    <string name="menu_dmr_report">DMR Report</string>
    <string name="menu_account_statement">MAin Balance Report</string>
    <string name="menu_express_dmr_payout">Express DMR/Payout</string>
    <string name="menu_recharge_history">Recharge History</string>
    <string name="menu_recharge_report">Recharge Report</string>
    <string name="menu_kyc">KYC</string>
    <string name="menu_aeps_kyc">AEPS KYC</string>
    <string name="menu_onboard_kyc_icici">Onboard KYC ICICI </string>
    <string name="menu_icici_aeps_report">ICICI AEPS Report</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_mpin">Change mPin</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="make_my_wallet">Make my wallet</string>
    <string name="login">Login</string>
    <string name="main_wallet">MAiN Balance</string>

    <string name="noDataFound">No Data Found</string>
    <string name="successful_title">Successful</string>
    <string name="attention_error_title">Attention!</string>
    <string name="connection_lost">Slow internet connection!</string>
    <string name="something_went_wrong">Oops ! Something Went Wrong</string>
    <string name="timed_out">Oops.Timeout Error!</string>
    <string name="oops_connect_your_internet">Oops! Connect Your Internet</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="server_down">Unable to reach server</string>

    <string name="enter_mobile">Please enter mobile no.</string>
    <string name="enter_bankRefId">Please enter Bank Ref Id </string>
    <string name="enter_password">Please enter password</string>
    <string name="logout_success">Logout successfully...</string>
    <string name="rupee">"₹"</string>
    <string name="forget_password">Forget password</string>
    <string name="please_enter_mpin">Please enter mPin</string>
    <string name="please_enter_correct_mpin">Please enter correct mPin</string>
    <string name="invalid_login">Please check your mobile No.&amp; password</string>

    <string name="prepaid_recharge">Prepaid Recharge</string>
    <string name="postpaid_recharge">Postpaid Recharge</string>
    <string name="enter_dth_number">Enter DTH number</string>
    <string name="enter_gas_number">Enter CA number</string>
    <string name="enter_landline_number">Enter landline number</string>

    <string name="gas_recharge">Gas Recharge</string>
    <string name="landline_recharge">Landline Recharge</string>
    <string name="dth_recharge">DTH Recharge</string>
    <string name="bbps_pay">BBPS Pay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="proceed">Proceed</string>
    <string name="enter_recharge_amount">Enter recharge amount</string>
    <string name="please_select_operator">Please select operator</string>
    <string name="please_select_circle">Please select circle</string>
    <string name="please_choose_bank">Please choose bank</string>
    <string name="dmr_panel">DMR Panel</string>
    <string name="sender_mobile_number">Enter Sender Mobile Number</string>
    <string name="register">Register</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="new_sender_registration">New Sender Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address_1">Enter Address 1</string>
    <string name="enter_address_2">Enter Address 2</string>
    <string name="submit">Submit</string>
    <string name="banefeciary_name">Banefeciary Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>

    <string name="clear">Clear</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="add_baneficiary">Add Baneficiary</string>
    <string name="please_select_transfer_method">Please select transfer method</string>
    <string name="please_enter_transfer_amount">Please enter transfer amount</string>
    <string name="get_all_beneficiary">Get All Beneficiary</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="enter_baneficiary_name">Enter Baneficiary name</string>
    <string name="enter_payment_method">Choose payment method</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="select_payment_date">Please select payment date</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Please Enter Amount</string>
    <string name="bank_ref_id">Bank Ref ID</string>
    <string name="express_dmr">Express DMR</string>
    <string name="give_top_up">Give Topup</string>
    <string name="credit_card">Credit Card</string>
    <string name="icici_aeps">ICICI AEPS</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="save_changes">Save Changes</string>

    <string name="enter_current_password">Enter Current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>


    <string name="enter_current_mpin">Enter Current Transaction Pin</string>
    <string name="enter_new_mpin">Enter New Transaction Pin</string>
    <string name="enter_confirm_mpin">Enter Confirm Transaction Pin</string>
    <string name="enter_confirm_pin_same">Pin and Confirm pin must be same</string>

    <string name="enter_confirm_password_2">Password and confirm password must be same</string>
    <string name="search">Search</string>

    <string name="select_from_date">Please Select From Date</string>
    <string name="select_to_date">Please Select To Date</string>
    <string name="customer_mobile_number">Customer Mobile Number</string>
    <string name="member_details">Member Details</string>
    <string name="send">Send</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="next">Next</string>
    <string name="choose_operator">Choose Operator</string>

    <string name="remark">Enter Remark</string>
    <string name="aeps_balance">AePS Balance</string>
    <string name="insentive_balance">Insentive Balance</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="select_region">Please Select Region</string>
</resources>