<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.allfragment.MemberDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:background="@color/colorLightGrayBg"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvErrorMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="invisible" />

                    <EditText
                        android:id="@+id/edtState"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:inputType="text"
                        android:hint="@string/enter_state"
                        android:maxLength="50"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:inputType="text"
                        android:maxLength="50"
                        android:hint="@string/enter_email"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:inputType="number"
                        android:hint="@string/enter_mobile_number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:inputType="number"
                        android:maxLength="60"
                        android:hint="@string/enter_amount"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtRemark"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:inputType="text"
                        android:maxLength="60"
                        android:hint="@string/remark"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button_solid_blue"
                        android:fontFamily="@font/roboto"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
