<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        tools:context=".ui.allfragment.ChangeMpinFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_10sdp"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCurrentTextInput"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edtCurrentPin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/edit_text_outline"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="left|center"
                    android:hint="@string/enter_current_mpin"
                    android:inputType="numberPassword"
                    android:maxLength="30"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNTextInput"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edtNPin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/edit_text_outline"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="left|center"
                    android:hint="@string/enter_new_mpin"
                    android:inputType="numberPassword"
                    android:maxLength="30"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextInput"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edtConfirmPin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/edit_text_outline"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="left|center"
                    android:hint="@string/enter_confirm_mpin"
                    android:inputType="numberPassword"
                    android:maxLength="30"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_solid_blue"
                android:fontFamily="@font/roboto"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </RelativeLayout>
</layout>
