<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.allfragment.ExpressDMRFragment">

        <LinearLayout
            android:id="@+id/lLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight=".5">

                <Button
                    android:id="@+id/btnALLBaneficiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_solid_blue"
                    android:fontFamily="@font/roboto"
                    android:text="@string/get_all_beneficiary"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight=".5">

                <Button
                    android:id="@+id/btnAddBaneficiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_solid_blue"
                    android:fontFamily="@font/roboto"
                    android:text="@string/add_baneficiary"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lLayoutHeader"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lLayoutAddForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="invisible" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/rLayoutChooseBank"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_outline"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtChooseBank"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_toLeftOf="@+id/ivDownArrow"
                            android:background="@null"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="left|center"
                            android:hint="Choose Your Bank"
                            android:inputType="text"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/colorTextLight"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/ivDownArrow"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_search" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/rLayoutChooseBank"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:visibility="gone" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lLaddForm"
                    android:visibility="visible"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edtAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:hint="@string/account_number"
                        android:inputType="number"
                        android:maxLength="50"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtBanefeciaryName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:hint="@string/banefeciary_name"
                        android:inputType="text"
                        android:maxLength="60"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtIFSCCode"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:hint="@string/ifsc_code"
                        android:inputType="number"
                        android:maxLength="50"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnIFSC"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button_solid_blue"
                        android:fontFamily="@font/roboto"
                        android:text="Get ifsc"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edit_text_outline"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left|center"
                        android:hint="Mobile Number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorTextDark"
                        android:textColorHint="@color/colorTextLight"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button_solid_blue"
                        android:fontFamily="@font/roboto"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lLayoutAddBaneList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycViewBaneficiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvNoRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
